fix for alignment

--- a/static/css/_landing.scss
+++ b/static/css/_landing.scss
@@ -530,7 +530,7 @@ $header-color : #333333;
   background-size: 65% 100%;
   min-height: 18.75rem;
   position: relative;
-
+  padding: 0 2rem;
   @include for-size(mobile) {
     min-height: 43.75rem;
     background-image: none;
@@ -590,7 +590,7 @@ $header-color : #333333;
 .about-trade-wrapper {
   background-color: #F8FAFB;
   padding: 0;
-
+  padding: 0 2rem;
   &-inner {
     padding: 3rem 0;
 
